# markovflow

./: .gitignore  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  extrapylint  mypy.ini  poetry.toml  pylintrc  pyproject.toml  requirements.txt  setup.py  tests_requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yaml  quality-check.yaml  upload-pypi.yaml
docs/: Makefile  README.md  api.html  conf.py  docs_requirements.txt  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  refs.bib  search.html  searchindex.js  tutorials.html
docs/_modules/: index.html
docs/_sources/: api.rst.txt  tutorials.rst.txt
docs/notebooks/: README.md  choosing_and_combining_kernels.html  choosing_and_combining_kernels.ipynb  choosing_and_combining_kernels.py  factor_analysis.html  factor_analysis.ipynb  factor_analysis.py  importance_weighted_vi.html  importance_weighted_vi.ipynb  importance_weighted_vi.py  markovflow_cvi.html  markovflow_cvi.ipynb  markovflow_cvi.py  markovflow_gpr.html  markovflow_gpr.ipynb  markovflow_gpr.py  markovflow_pep.html  markovflow_pep.ipynb  markovflow_pep.py  markovflow_sparse_cvi.html  markovflow_sparse_cvi.ipynb  markovflow_sparse_cvi.py  markovflow_sparse_pep.html  markovflow_sparse_pep.py  markovflow_variational_gpr.html  markovflow_variational_gpr.ipynb  markovflow_variational_gpr.py  multistage_likelihood.html  multistage_likelihood.ipynb  multistage_likelihood.py  piecewise_kernels.html  piecewise_kernels.py  spatio_temporal.html  spatio_temporal.ipynb  spatio_temporal.py  stacked_kernels.html  stacked_kernels.ipynb  stacked_kernels.py
docs/sde/: SSM_kl_Esde_verify.py  ou_sde_vi.py  ou_sde_vi_test.py  sde_exp_utils.py  t_vgp_trainer.py
markovflow/: __init__.py  base.py  block_tri_diag.py  conditionals.py  cyclic_reduction.py  cyclic_reduction_utils.py  emission_model.py  gauss_markov.py  kalman_filter.py  mean_function.py  posterior.py  ssm_gaussian_transformations.py  ssm_natgrad.py  state_space_model.py  utils.py
markovflow/kernels/: __init__.py  constant.py  kernel.py  latent_exp_generated.py  matern.py  periodic.py  piecewise_stationary.py  sde_kernel.py
markovflow/likelihoods/: __init__.py  likelihoods.py  multivariate_gaussian.py  mutlistage_likelihood.py
markovflow/models/: __init__.py  cvi_sde.py  gaussian_process_regression.py  iwvi.py  models.py  pep.py  sparse_pep.py  sparse_variational.py  sparse_variational_cvi.py  spatio_temporal_variational.py  variational.py  variational_cvi.py  variational_cvi_sde.py  vi_sde.py
markovflow/sde/: __init__.py  drift.py  linearize_sde.py  sde.py  sde_utils.py
tests/: conftest.py
tests/integration/: __init__.py  test_f_covariance.py  test_kalman_filter.py  test_kalman_filter_with_sites.py  test_kalman_filter_with_sparse_sites.py  test_kernels.py  test_leg_kernels.py  test_posterior.py  (+1 more)
(+216 files in other folders)
